# Willow

./: .gitignore  CMakeLists.txt  README.md  make.lua  todo.md  vkvia.html
CMake/: BuildWillowShaders.cmake  Findglm.cmake  MoveWillowAssets.cmake  Willow.cmake  WillowConfig.cmake  WillowProject.cmake  WuaConfig.cmake
examples/: CMakeLists.txt  Cube.cpp  FontRenderer.cpp
examples/AsteroidsExample/: AsteroidsExample.cpp
examples/CubeExample/: CubeExample.cpp
examples/CubeExample/Assets/Shaders/: shader.vert  vert.spv
examples/FontRendering/: FontRenderer.cpp
examples/Skeleton/: Skeleton.cpp
examples/TriangleTest/: TriangleTest.cpp
examples/TriangleTest/Assets/Shaders/: shader.frag  shader.vert
include/: willow.hpp
include/willow/: Application.hpp  Assets.hpp  DefaultAssets.hpp  Entity.hpp  Game.hpp  Warden.hpp  application.hpp
include/willow/ECS/: ECS.h
include/willow/Lua/: lauxlib.h
include/willow/Vulkan/: VulkanBuffer.hpp  VulkanCommandInterface.hpp  VulkanGraphicsPipelineFactory.hpp  VulkanMemoryManager.hpp  VulkanRenderCore.hpp  VulkanRoot.hpp  VulkanSetup.hpp  VulkanShaderCompiler.hpp  VulkanSwapchain.hpp  VulkanTextureFactory.hpp  vulkan_frame_buffer_array.hpp  vulkan_graphics_pipeline.hpp  vulkan_index_buffer.hpp  vulkan_render_core.hpp  vulkan_render_task_manager.hpp  vulkan_shader.hpp  vulkan_uniform_buffer_array.hpp  vulkan_vertex_buffer.hpp
include/willow/console/: ConsoleCore.hpp  Font.hpp  FontMap.hpp  consolas_font.hpp  wilo_console.hpp
include/willow/data/: Data.hpp  Type.hpp  TypeOf.hpp  Value.hpp  View.hpp
include/willow/dev-utils/Vulkan/: vkdevice.hpp  wilovk.hpp
include/willow/ecs/: EntityComponentSystem.hpp  EntityManager.hpp  Systems.hpp
include/willow/input/: InputManager.hpp  KeyCodes.hpp  MouseCodes.hpp
include/willow/messaging/: MessageSystem.hpp  Messages.hpp  Xylem.h  keyboard_message.hpp  mouse_message.hpp  wilo_message.hpp  wilo_observer.hpp  wilo_observer_system.hpp  wilo_subject.hpp  window_message.hpp
include/willow/rendering/: Attachment.hpp  Bloom.hpp  Buffer.hpp  DataLayout.hpp  DataView.hpp  Frame.hpp  Geometry.hpp  Material.hpp  Mesh.hpp  Model.hpp  Objects.hpp  OrthographicCamera3D.hpp  PerspectiveCamera3D.hpp  PrespectiveCamera3D.hpp  RenderDataTypes.hpp  RenderPath.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Tag.hpp  Texture.hpp  wilo_render_core.hpp  wilo_render_data_layout.hpp  wilo_renderer.hpp  wilo_rendering_API.hpp  wilo_vertex_types.hpp
include/willow/rendering/Vulkan/: vulkan_context.hpp  vulkan_index_buffer.hpp  vulkan_render_buffer.hpp  vulkan_render_core.hpp  vulkan_swapchain.hpp  vulkan_vertex_buffer.hpp
include/willow/rendering/camera/: OrthographicCamera3D.hpp
include/willow/root/: Core.hpp  EngineComponent.hpp  FileSystem.hpp  Logger.hpp  Root.hpp  Tag.hpp  WiloConfig.h  WiloConfig.h.in  logr.hpp  wilo_dev_core.hpp  wilo_engine_element.hpp
include/willow/scripting/: LuaBinding.hpp  LuaCommunication.hpp  LuaEnvironment.h  LuaEnvironment.hpp  LuaFunction.hpp  Scripting.hpp
include/willow/utils/: Helpers.hpp
include/willow/utils/Vulkan/: vkswapchain.hpp  vktypes.hpp  vkutil.hpp
include/willow/window/: mac_window.hpp  window.hpp
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/: CMakeLists.txt  WillowCLI.cpp
src/willow/: Application.cpp  Assets.cpp  CameraController.hpp  DefaultAssets.cpp  Game.cpp  application.cpp
src/willow/Vulkan/: VulkanBuffer.cpp  VulkanCommandInterface.cpp  VulkanGraphicsPipelineFactory.cpp  VulkanMemoryManager.cpp  VulkanRoot.cpp  VulkanShaderCompiler.cpp  VulkanSwapchain.cpp  VulkanTextureFactory.cpp  vkdevice.cpp  vkswapchain.cpp  vkutil.cpp  vulkan_index_buffer.cpp  vulkan_render_core.cpp  vulkan_shader.cpp  vulkan_vertex_buffer.cpp
src/willow/console/: ConsoleCore.cpp  Font.cpp  FontMap.cpp  wilo_console.cpp
src/willow/dev-utils/Vulkan/: VulkanSetup.cpp
src/willow/input/: InputManager.cpp
src/willow/messaging/: MessageSystem.cpp  Xylem.cpp  keyboard_message.cpp  messages.cpp  mouse_message.cpp  wilo_observer.cpp  wilo_subject.cpp  window_message.cpp
src/willow/rendering/: Attachment.cpp  DataLayout.cpp  Model.cpp  OrthographicCamera3D.cpp  PerspectiveCamera3D.cpp  PrespectiveCamera3D.cpp  RenderPath.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Tag.cpp  Texture.cpp  wilo_renderer.cpp
src/willow/rendering/Vulkan/: vkcore.cpp  vulkan_context.cpp  vulkan_render_core.cpp
src/willow/rendering/camera/: OrthographicCamera3D.cpp
src/willow/root/: Core.cpp  Data.cpp  DataView.cpp  EntityComponentSystem.cpp  FileSystem.cpp  Logger.cpp  Systems.cpp  Tag.cpp  Type.cpp  Value.cpp  logr.cpp
src/willow/scripting/: LuaBinding.cpp  LuaCommunication.cpp  LuaEnvironment.cpp
src/willow/window/: GLFWWindow.cpp  mac_window.cpp
test/: AssetsTest.cpp  CMakeLists.txt  ConsoleCoreTest.cpp  DataTypeTest.cpp  DataValueTest.cpp  ECSTest.cpp  FileSystemTest.cpp  InputManagerTest.cpp  LuaDataTest.cpp  MessengerTest.cpp  NewRendererBootStrap.cpp  ObserverMessageTest.cpp  RenderDataTest.cpp  RenderStressTest.cpp  SceneTest.cpp  Scratch.cpp  SystemsTest.cpp  TagTest.cpp  TestingTools.hpp  TypeSegfaultTest.cpp  catch.hpp
